--- a/back/package.json
+++ b/back/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.4.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "pg": "^8.10.0",
+    "sequelize": "^6.29.1",
     "supertest": "^6.3.3"
   }
 }
